✨ Adds content, color scheme change etc (#2)
* New branch added config  deleted

* content added

* Responsive content phase 1

* fixes, content added

* Create CNAME

* fixes preloder

* fixes preloder

* fixes content

* fixes

* fixes

* fixes

* content bolder

* fixes

* font smaller in contact form

* font smaller in footer

* fixes base_url

* favicon added

Co-authored-by: Aviral Mishra <onstermonster0.1@gmail.com>

--- a/About.html
+++ b/About.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/About.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo.png">
   <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
@@ -34,7 +35,7 @@
 </head>
 
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+  <img class="preloader-image" src="./images/preloader.gif"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 
@@ -151,7 +152,7 @@
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
           <div
-            class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            class="u-align-center u-white u-container-style u-inner-container-layout u-opacity u-opacity-75 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
@@ -227,11 +228,11 @@
               </ul>
             </div>
           </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          <div class="u-blue u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.png" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -244,20 +245,18 @@
       <div class="u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
-          <a href="./docs/brochure.pdf"
+          <p class="u-text u-text-body-alt-color u-text-2">We, at Kadamb, are group of enthusiastic individuals who are trained in  both business and technical domain from some of the most prestigious institutions of the world. We have started this organisation with an aim to fuel one with the deep dissection of other.
+          </p>
+          <!-- <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
-            </a>
+            </a> -->
         </div>
       </div>
       <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+          <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">Our Ideology</h2>
+          <p class="u-text u-text-body-alt-color u-text-2">The large network of barky stems shows the variety of services we provide and industries we serve. <br> <br>
+            The leaves of the tree shows our every single effort to bring satisfaction and success to your company.</p>
         </div>
       </div>
     </div>
@@ -273,17 +272,16 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Our vision</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We have a vision to make the most advanced analytics solutions deliverable for our clients with minimum strain to them while achieving so. We integrate decision logics, sophisticated mathematics, and ML into a simpler manner that you can use to operate your organisation. Using mathematics, data technologies and our buisness-oriented minds, we can reorganise your business needs and uncomplicate decision-making, thus ensuring success.
             </p>
-            <ul>
+            <!-- <ul>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
               <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
             </ul>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -302,17 +300,15 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Why us</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              At Kadamb, we believe indulging creativity is necessary at each step of data processing. Of course, a data scientist who can create an attractive and easy-to-grasp report or visual out of results are a great pick but we want to differentiate ourself by taking this to next level. We emphasize on fueling skillful communication, get around the way to make the impossible possible and  beautifully craft algorithims through creativity at the best cost guaranteed compared to anywhere else.
             </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
-            </ul>
-            <p>
+            <!-- <ul>
+              <li><i class="bi bi-check-circle"></i> We combine business intelligence and technology, thus delivering you the charm of success.</li>
+              <li><i class="bi bi-check-circle"></i> We at Kadamb as a family, will never let you down.</li>
+            </ul> -->
+            <!-- <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -334,11 +330,11 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt=""
+            <img class="footer_img" src="./images/logo.png" height="70" alt=""
               loading="lazy" />
           </div>
 
-          <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
+          <p class="text-center"></p>
 
            <ul class="list-unstyled d-flex flex-row justify-content-center">
             <!-- <li>
@@ -357,7 +353,7 @@
               </a>
             </li>
             <li> -->
-              <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+              <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/company/kadamb-intelligence/">
                 <h4><i class="fa fa-linkedin-square"></i></h4>
               </a>
             </li>
@@ -389,34 +385,39 @@
         <!--Grid column-->
 
 
+        
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <!-- <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
+              
+          <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>   -->
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+              <a href="/index.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+              <a href="/About.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>About</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+              <a href="/Industries.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Industries</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
+              <a href="/Services.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Services</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+              <a href="/Support.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Support</a>
             </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li> -->
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> --> 
-          </ul>
+          </ul> 
         </div>
+
 
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
@@ -425,13 +426,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
+              <p style="font-size: medium;"><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
@@ -443,29 +444,11 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright
+      ©  2022 Copyright
     </div>
     <!-- Copyright -->
   </footer>
 
-
-  <!--             ******************* Old footer ********************* -->
-  <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
-      </div></footer> -->
-
-  <!--          ****************Old space for links****************** -->
-  <!-- <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>
-      <p class="u-text">
-        <span></span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>. 
-    </section> -->
     <script src="./Scripts/Global.js"></script>
 </body>
 
