--- a/Industries.html
+++ b/Industries.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/Industries.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo.png">
   <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
@@ -30,7 +31,7 @@
   <meta property="og:type" content="website">
 </head>
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg" alt="">
+  <img class="preloader-image" src="./images/preloader.gif" alt="">
 </div>
 <div class="preloaderlayer"></div>
 <body class="u-body">
@@ -125,7 +126,7 @@
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
           <div
-            class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            class="u-align-center u-white u-container-style u-inner-container-layout u-opacity u-opacity-75 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
@@ -180,11 +181,11 @@
               </ul>
             </div>
           </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          <div class="u-blue u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+       <img src="./images/logo.png" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -226,85 +227,70 @@
             aria-labelledby="link-retail">
             <div class="u-container-layout u-container-layout-1">
               <img class="industries_images" src="./images/retail_industries-2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
+              <h4 class="u-text u-text-default u-text-1">Retail</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-              <p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
-                from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
-                long-lasting partnerships and affiliations with like-minded organizations and leaders share our
-                commitment to deliver lasting results.</p>
-              <h4 class="u-text u-text-default u-text-3">information</h4>
+              <p class="u-text u-text-default u-text-2">With sophisticated analytics, you can increase shop profitability and consumer engagement by analysing sales, managing inventory, and identifying customer and industry trends, thus maximising personnel effectiveness by knowing the customer per sales associate ratio. By understanding local consumer trends, sales statistics, and more to make data-driven decisions.</p>
+              <!-- <h4 class="u-text u-text-default u-text-3">information</h4>
               <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
               <p class="u-text u-text-default u-text-4">Objectively innovate empowered manufactured products whereas
                 parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
-                Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
+                Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p> -->
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="healthcare" role="tabpanel" aria-labelledby="link-healthcare">
             <div class="u-container-layout u-container-layout-2">
               <img class="industries_images" src="./images/healthcare_industries_2.png" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
-              <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
-                role they play in the South African Container Shipping industry..</p>
+              <h4 class="u-text u-text-default u-text-5">Healthcare</h4>
+              <p class="u-text u-text-default u-text-6">We analyze policy and claim data to identify new policy opportunities by determining which policies generate more claims and how much the premium may be raised. Moreover, we reduce the number of claims via improving healthcare and changing policies. </p>
               <ul class="u-text u-text-default u-text-7">
-                <li>Transnet Freight Rail (formerly known as Spoornet) </li>
-                <li>Transnet National Port Authority (formerly known as NPA) </li>
-                <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
+                <li>We use ML to anticipate future trends and determine patient risk ratings and find a link between patient care, financial performance, and policies to optimise whole operations. </li>
+                <li>We try to improve doctor and staff demand forecasting, reduce patient wait times, and maximise hospital resources.</li>
               </ul>
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="realestate" role="tabpanel" aria-labelledby="link-realestate">
             <div class="u-container-layout u-container-layout-3">
               <img class="industries_images" src="./images/realestate_industries_2.webp" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
+              <h4 class="u-text u-text-default u-text-1">Real Estate</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-              <p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
-                from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
-                long-lasting partnerships and affiliations with like-minded organizations and leaders share our
-                commitment to deliver lasting results.</p>
-              <h4 class="u-text u-text-default u-text-3">information</h4>
+              <p class="u-text u-text-default u-text-2">We analyse property price indexes in order to provide you with the most advantageous bargains. Cluster analysis is also carried out through the generation of automated valuation models, the use of time series forecasting and other methods, and this allows us to present you with the greatest possible spectrum out of the available spectrum.</p>
+              <!-- <h4 class="u-text u-text-default u-text-3">information</h4>
               <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
               <p class="u-text u-text-default u-text-4">Objectively innovate empowered manufactured products whereas
                 parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
-                Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
+                Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p> -->
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="finance" role="tabpanel" aria-labelledby="link-finance">
             <div class="u-container-layout u-container-layout-4">
               <img class="industries_images" src="./images/financial_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
-              <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
-                role they play in the South African Container Shipping industry..</p>
+              <h4 class="u-text u-text-default u-text-5">Finance</h4>
+              <p class="u-text u-text-default u-text-6">Our ML empowered financial analytics solutions contribute strategically to business outcomes improvement through increased revenues, cost savings, avoided losses, and realised cash possibilities.
+              </p>
               <ul class="u-text u-text-default u-text-7">
-                <li>Transnet Freight Rail (formerly known as Spoornet) </li>
-                <li>Transnet National Port Authority (formerly known as NPA) </li>
-                <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
+                <li>We leverage machine learning and design to assist CFO businesses in planning, forecasting, budgeting, and other analytical operations that help assess the organization's overall health and provide support for critical business decisions.</li>
               </ul></div>
           </div>
           <div class="u-container-style u-tab-pane" id="logistics" role="tabpanel" aria-labelledby="link-logistics">
             <div class="u-container-layout u-container-layout-5">
               <img class="industries_images" src="./images/logistics_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
-              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
-              from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
-              long-lasting partnerships and affiliations with like-minded organizations and leaders share our
-              commitment to deliver lasting results.</p>
-            <h4 class="u-text u-text-default u-text-3">information</h4>
-            <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
-            <p class="u-text u-text-default u-text-4">Objectively innovate empowered manufactured products whereas
-              parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
-              Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p></div>
+              <h4 class="u-text u-text-default u-text-1">Logistics</h4>
+              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We provide services by reducing stop-over durations and reducing route delays using GPS, scanners, sensors and crew data. Use ML to forecast and analyse routes in real-time. Make proactive route planning, rerouting, and staffing decisions. Track critical indicators to enhance services, lower expenses, and increase profits. Analyze daily income per kilometre, vehicle expenditures, and breakdown losses to design the next transportation lot. Based on fare patterns, fuel prices, etc.</p>
+            <p class="u-text u-text-default u-text-4"></p></div>
           </div>
           <div class="u-container-style u-tab-pane" id="manufacturing" role="tabpanel" aria-labelledby="link-manufacturing">
             <div class="u-container-layout u-container-layout-6">
               <img class="industries_images" src="./images/manufacturing_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
-              <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
-                role they play in the South African Container Shipping industry..</p>
-              <ul class="u-text u-text-default u-text-7">
-                <li>Transnet Freight Rail (formerly known as Spoornet) </li>
-                <li>Transnet National Port Authority (formerly known as NPA) </li>
-                <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
-              </ul></div>
+              <h4 class="u-text u-text-default u-text-5">Manufacturing</h4>
+              <p class="u-text u-text-default u-text-6">Monitor production cycles in real time and use ML analytics to get knowledge about the production unit's efficiency, maintenance requirements, and product quality.
+              </p>
+              <p class="u-text u-text-default u-text-6">
+                Combine data from a variety of sources, including legacy systems, production units and develop accessible dashboards to gain complete insight.
+              </p>
+              <!-- <ul class="u-text u-text-default u-text-7">
+                <li>Combine data from a variety of sources, including legacy systems, production units and develop accessible dashboards to gain complete insight. </li>
+              </ul> -->
+            </div>
           </div>
         </div>
       </div>
@@ -324,10 +310,10 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt="" loading="lazy" />
+            <img class="footer_img" src="./images/logo.png" height="70px" alt="" loading="lazy" />
           </div>
 
-          <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
+          <p class="text-center">  </p>
 
           <ul class="list-unstyled d-flex flex-row justify-content-center">
             <!-- <li>
@@ -345,7 +331,7 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li> -->
-            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/company/kadamb-intelligence/">
               <h4><i class="fa fa-linkedin-square"></i></h4>
             </a>
             </li>
@@ -377,34 +363,39 @@
         <!--Grid column-->
 
 
+        
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <!-- <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Industries</h5>
+              
+          <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+              <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>   -->
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+              <a href="/index.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+              <a href="/About.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>About</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+              <a href="/Industries.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Industries</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Finance</a>
+              <a href="/Services.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Services</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+              <a href="/Support.html" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Support</a>
             </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
-            </li> -->
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> -->
-          </ul>
+          </ul> 
         </div>
+
 
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
@@ -413,13 +404,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
+              <p style="font-size: medium;"><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
@@ -431,26 +422,11 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright
+      ©  2022 Copyright
     </div>
     <!-- Copyright -->
   </footer>
 
-  <!--        *************************Old footer********************************** -->
-  <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>. 
-    </section> -->
   <script src="./Scripts/Global.js"></script>
   <script src="./Scripts/industries.js"></script>
 </body>
