removes block from about us page

--- a/About.html
+++ b/About.html
@@ -252,13 +252,13 @@
             </a> -->
         </div>
       </div>
-      <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
+      <!-- <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">Our Ideology</h2>
           <p class="u-text u-text-body-alt-color u-text-2">The large network of barky stems shows the variety of services we provide and industries we serve. <br> <br>
             The leaves of the tree shows our every single effort to bring satisfaction and success to your company.</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
  
